--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "react-zmage": "^0.8.5-beta.36",
     "web-vitals": "^1.0.1"
   },
+  "engines": {
+    "node": "15.8.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
